<resources>
    <string name="app_name">WeatherApp</string>

    <string name="location">Location:</string>
    <string name="windSpeed">Wind Speed (m/hr):</string>
    <string name="windDirection">Wind Direction (Degrees):</string>
    <string name="temperature">Temperature(F):</string>
    <string name="humidity">Humidity (%):</string>
    <string name="sunrise">Sunrise Time:</string>
    <string name="sunset">Sunset Time:</string>
</resources>
