<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="Please enter a location"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Look Up Sync"
            android:onClick="doSync"
            android:id="@+id/button"
            android:enabled="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Look Up Async"
            android:onClick="doAsync"
            android:enabled="false"
            android:id="@+id/button2"/>
    </LinearLayout>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:paddingTop="25dp"
                  android:weightSum="1" android:visibility="invisible"
                  android:id="@+id/resullTable">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Weather Results"
            android:id="@+id/textView"
            android:layout_gravity="left"/>



        <TableLayout
            android:paddingTop='10dp'
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.40">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/location"/>
                <TextView android:id="@+id/location"
                          android:paddingLeft="30dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/windSpeed"/>
                <TextView android:id="@+id/windspeed"
                          android:paddingLeft="30dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/windDirection"/>
                <TextView android:id="@+id/winddirection"
                          android:paddingLeft="30dp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/temperature"/>
                <TextView android:id="@+id/temp"
                          android:paddingLeft="30dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/humidity"/>
                <TextView android:id="@+id/humidity"
                          android:paddingLeft="30dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/sunrise"/>
                <TextView android:id="@+id/sunrise"
                          android:paddingLeft="30dp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView android:text="@string/sunset"/>
                <TextView android:id="@+id/sunset"
                          android:paddingLeft="30dp"/>
            </TableRow>
        </TableLayout>
    </LinearLayout>
</LinearLayout>